[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.5",
    "coverage==7.6.1",
    "fastapi[standard]==0.114.1",
    "httptools==0.6.1",
    "pydantic-settings==2.5.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "types-python-jose==3.3.4.20240106",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "T201", # flake8-print
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

